--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
         exclude group: 'stax', module: 'stax'
     }
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    //compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    //compile 'com.squareup.okhttp3:okhttp:3.3.0'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
